# spectre

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  aclocal.m4  config.h.in  configure.ac  libtool
data/: Makefile  Makefile.am  Makefile.in  Makefile.u1conflict  spectre.desktop  spectre.desktop.in.in
data/config/: Makefile  Makefile.am  Makefile.in  Makefile.u1conflict  file-types.yaml  languages.json  languages.yaml
data/ui/: Makefile  Makefile.am  Makefile.in  Makefile.u1conflict  spectre-window.ui
po/: LINGUAS  Makefile  Makefile.in.u1conflict  POTFILES  POTFILES.in  es.po
src/: Makefile  Makefile.am  Makefile.in  Makefile.u1conflict  aboutdialog.cc  aboutdialog.h  audio.cc  audio.h  data.cc  data.h  fft.h  fftplan.cc  fftplan.h  filechooserdialog.cc  filechooserdialog.h  main.cc  pipeline.h  spectre  spectrogram.h  window.cc  window.h
src/.deps/: spectre-aboutdialog.Po  spectre-data.Po  spectre-filechooserdialog.Po  spectre-main.Po  spectre-spectre-aboutdialog.Po  spectre-spectre-filechooserdialog.Po  spectre-spectre-window.Po  spectre-window.Po
